[package]
name = "rusted-invidious-refresh-feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
youtubei-rs = "1.3.4"
serde_json = "1.0.81"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.11"
axum = { version = "0.5.8" }
rdkafka  = "0.28"
scylla = "0.4"
chrono= "0.4"
quick-xml = "0.23.0"
rusted-invidious-types = { git = "https://github.com/11Tuvork28/rusted-invidious-shared.git", version= "0.1.1"}